k8s/manifests-9ec81c/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journee-9ec81c
  namespace: journee
  labels:
    app: journee-9ec81c
spec:
  replicas: 1
  selector:
    matchLabels:
      app: journee-9ec81c
  template:
    metadata:
      labels:
        app: journee-9ec81c
    spec:
      imagePullSecrets:
        - name: gcr-pull-secret
      containers:
        - name: journee-9ec81c
          image: gcr.io/my-docker-471807/journee:v6.0.0
          ports:
            - containerPort: 3000
