k8s/manifests-9ec81c/service.yml
apiVersion: v1
kind: Service
metadata:
  name: journee-9ec81c
  namespace: journee
spec:
  selector:
    app: journee-9ec81c
  ports:
    - port: 80
      targetPort: 3000
